Segundo dia estrutura HTML e CSS

--- a/projetosFigmaImg/img.css/figma.css
+++ b/projetosFigmaImg/img.css/figma.css
@@ -1,14 +1,18 @@
 h1 {
     color: black;
+    font-family: pecita;
 }
 h2 {
     color: black;
+    font-family: pecita;
 }
 p {
     color: black;
+    font-family: pecita;
 }
 a {
     color: black;
+    font-family: pecita;
 }
 img {
     width: 100px;
