--- a/projetosFigmaImg/img.css/projetos.css
+++ b/projetosFigmaImg/img.css/projetos.css
@@ -1,13 +1,16 @@
 h1{
     font-size: 60px;
     text-align: center;
+    font-family: pecita;
 }
 
 p{
     font-size: 14px;
     text-align: justify;
+    font-family: pecita;
 }
 p1{
-    font-size: 16px;
+    font-size: 20px;
     text-align: center;
+    font-family: pecita;
 }
