--- a/projetosFigmaImg/style.css
+++ b/projetosFigmaImg/style.css
@@ -4,3 +4,10 @@
     background: #0acf83;
     display: flex;
 }
+.casa_container{
+position: absolute;
+width: 500px;
+height: 61.19px;
+left: 21px;
+top: 30px;
+}
