--- a/projetosFigmaImg/img.css/projetos.css
+++ b/projetosFigmaImg/img.css/projetos.css
@@ -9,7 +9,7 @@ p{
     text-align: justify;
     font-family: pecita;
 }
-p1{
+.footer{
     font-size: 20px;
     text-align: center;
     font-family: pecita;
