--- a/projetosFigmaImg/img.css/projetos.css
+++ b/projetosFigmaImg/img.css/projetos.css
@@ -1,3 +1,7 @@
+body{
+    margin-top: 200px;
+}
+
 h1{
     font-size: 60px;
     text-align: center;
@@ -9,8 +13,17 @@ p{
     text-align: justify;
     font-family: pecita;
 }
+.text{
+    padding: 0 20%;
+}
 .footer{
     font-size: 20px;
     text-align: center;
     font-family: pecita;
+}
+
+@media (min-width: 768px) {
+    p{
+        font-size: 20px;
+    }
 }
