--- a/projetosFigmaImg/img.css/projetos.css
+++ b/projetosFigmaImg/img.css/projetos.css
@@ -1,5 +1,5 @@
 body{
-    margin-top: 100px;
+    margin-top: 50px;
 }
 
 h1{
@@ -25,5 +25,9 @@ p{
 @media (min-width: 768px) {
     p{
         font-size: 20px;
+    }
+
+    body{
+        margin-top: 150px;
     }
 }
